<resources>
    <string name="app_name">BlueRadar</string>
    <string name="title_devices">Devices</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_map">Map</string>
    <string name="default_username">Pikachu</string>
    <string name="default_email">pikachu@pokemon.com</string>
    <string name="settings">User Settings</string>
    <string name="options">App Options</string>
    <string name="log_out">Log Out</string>
    <string name="preferences">Preferences</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Map Setting Dialog Fragment -->
    <string name="option_show_all">Show all</string>
    <string name="option_show_last_location">Show last location</string>
    <string name="option_show_present_location">Show present location</string>
    <string name="option_show_disconnected">Show disconnected</string>
    <string name="option_show_connected">Show connected</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Strings and elements used in Preferences (Both settings preference and options preference  -->
    <string-array name="options_colours">
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <!--        <item>Yellow</item>-->
        <!--        <item>Green</item>-->
        <!--        <item>Purple</item>-->
    </string-array>
    <string-array name="options_values">
        <item>AppThemeRed</item>
        <item>AppTheme</item>
        <item>AppThemeBlue</item>
        <!--        <item>AppThemeYellow</item>-->
        <!--        <item>AppThemeGreen</item>-->
        <!--        <item>AppThemePurple</item>-->
    </string-array>
    <string name="about">About</string>
    <string name="about_the_developers">About The Developers</string>
    <string name="about_blueradar">About BlueRadar</string>
    <string name="about_app_text">The revolutionary upgrades in IoT and the immense love towards losing cables in our recent technological trends has led to a massive outburst in the number of wireless devices we use. Sometimes, we know that it gets a little overwhelming for everyone. Don\'t worry though, we\'ve got you. BlueRadar is a unified system that can manage, track and locate all the devices that you\'ve paired with your Android smartphone.</string>
    <string name="shashank_thanalapati">Shashank Thanalapati</string>
    <string name="about_shanks">Avid PC Building enthusiast, gamer and always on the latest version of Ubuntu. Considers Java as the almighty programming language and reccommends it for everyone\'s use for everything.</string>
    <string name="lynn_nguyen">Lynn Nguyen</string>
    <string name="about_lynn">Third year SFU Software Systems student with a strong passion in Android development and aspire to become a full stack software developer at a company in the leagues of FAANG.</string>
    <string name="shan_ying_yang">Shan Ying Yang</string>
    <string name="about_fe">Jobless software developer looking for job opportunities. Fourth year SFU CS student with some experience in Java, Kotlin, C++, and K-Pop. Considers cryptocurrency mining is more important than gaming with GPUs.</string>
    <string name="julian_chan">Julian Chan</string>
    <string name="about_julian">Interests in weird things and avid procrastinator. I will probably work on anything but don\'t expect it to look nice. Does not understand why NFT\'s work, why people like them, and wants to sell stupid ones to people.</string>

    <!-- Navigation Activity -->
    <string name="open_gm_button">Open in Google Maps</string>

    <string-array name="profile_photo_selections">
        <item><br />Capture an Image</item>
        <item><br />Choose from Gallery</item>
    </string-array>
    <string name="profile_pref_name">PROFILE_PREFERENCE</string>
</resources>